--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,3 @@
-img {
-    transition: transform 0.3s ease-in-out;
-}
-
-img:hover {
-    transform: scale(1.1);
+.rounded-image {
+    border-radius: 100px;
 }
